test/errors/python_generator_error/zs/package_with_module_clashing/package_with_service_clash_error/clashing_name/some_package.zs
package package_with_module_clashing.package_with_service_clash_error.clashing_name.some_package;

struct Empty
{};
